--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,6 +485,7 @@
   .hero-title {
     text-align: center;
     margin-bottom: 30px;
+    font-size:35px;
   }
   
   .hero .btn-primary { margin-inline: auto; }
